# ringbox

./: .gitignore  README.md  package.json  pyproject.toml  pytype.cfg
scripts/: check_imports.sh  check_style.sh  check_types.sh  deps_add.sh  deps_install.sh  deps_update.sh  poetry_run.sh  run_serve.sh  run_tests.sh
src/: exceptions.py  main.py  requirements.txt  ringbox_types.py  services.py
src/static/: watch.css  watch.js
src/static/templates/: controls.tpl  history.tpl  ui.tpl  video.tpl
src/templates/: base.tpl  devices.tpl  index.tpl  login.tpl  watch.tpl
