[tool.poetry]
name = "ringbox"
version = "0.1.0"
description = "A server which allows you to view multiple Ring timelines at once."
authors = [
  "Nicholas Lee <csudcy@gmail.com>"
]

readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.9,<3.10"  # Compatible python versions must be declared here
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
ring-doorbell = "^0.7.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
requests = "^2.25.1"
diskcache = "^5.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytype = "^2021.5.25"
yapf = "^0.31.0"
isort = {extras = ["pyproject"], version = "^5.8.0"}

[tool.isort]
profile = "google"
# # TODO - the following can be removed if we use --profile=google
# #  with isort>=5 (not yet released)
# force_single_line = true
# force_sort_within_sections = true
# lexicographical = true
# # note - requires isort>=5
# single_line_exclusions = ["typing",]
# # end of --profile=google

# Google style guide has exception for "Long import statements", see:
# https://github.com/google/styleguide/blob/gh-pages/pyguide.md#32-line-length
# isort is inheriting line-length=80 from .editorconfig, so override it to
# a large number (there doesn't seem to be an option to specify no limit?).
line_length = 1000

skip = [
]

skip_glob = [
]

known_third_party = [
]

# note - the following will have no effect until we're using isort>=5
# see https://github.com/timothycrosley/isort/issues/969

# Special case for the typing module, see:
# https://github.com/google/styleguide/blob/gh-pages/pyguide.md#31912-imports-for-typing

# our current yapf config uses 2 space indent, but 4 for multi-line imports
indent = 4
